--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -1,6 +1,17 @@
 <view>
   <view class="map_container">
     <!-- 定义页面结构，可以使用地图组件也能使用其他组件 -->
-    <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" style="width: 100%; height: 300px;" bindmarkertap="makertap"></map>
+    <map 
+    id="map" 
+    subkey="5XEBZ-XJSCP-GZZDM-VSVDM-UVBPK-JFB3O" 
+    longitude="{{longitude}}" 
+    latitude="{{latitude}}" 
+    scale="14" 
+    show-location="true" 
+    markers="{{markers}}" 
+    style="width: 100%; height: 100%;" 
+    bindmarkertap="makertap"
+    polyline="{{polyline}}"
+    ></map>
   </view>
 </view>
